# radio-telemetry-tracker-drone-gcs

./: .gitignore  README.md  package.json  pyproject.toml
.github/workflows/: pytest_tests.yml  release.yml  ruff_lint.yml
frontend/: package.json
frontend/src/components/manager/: FrequencyManager.tsx
frontend/src/components/manager/cards/: FrequencyLayersControl.tsx  ShapesManagerCard.tsx  TrackingSession.tsx
frontend/src/components/map/: DataLayers.tsx  MapContainer.tsx  MapDrawingControls.tsx  MapDrawingLayer.tsx
frontend/src/context/: GlobalAppContext.tsx  MapShapesContext.tsx  globalAppTypes.ts
frontend/src/hooks/: useSimulatorShortcut.ts
frontend/src/types/: global.d.ts
frontend/src/utils/: backend.ts
radio_telemetry_tracker_drone_gcs/comms/: communication_bridge.py
radio_telemetry_tracker_drone_gcs/services/: frequency_db.py  frequency_service.py
scripts/: dev.py  utils.py
src/radio_telemetry_tracker_drone_gcs/: __init__.py  window.py
src/radio_telemetry_tracker_drone_gcs/comms/: communication_bridge.py  drone_comms_service.py  state_machine.py
src/radio_telemetry_tracker_drone_gcs/frontend_dist/: index.html
src/radio_telemetry_tracker_drone_gcs/frontend_dist/assets/: index-B9TQm1ep.js  index-B9TQm1ep.js.map  index-PWhVjMqu.css
src/radio_telemetry_tracker_drone_gcs/services/: frequency_db.py  frequency_service.py  poi_db.py  poi_service.py  simulator_core.py  tile_db.py  tile_service.py
