[project]
name = "radio-telemetry-tracker-drone-gcs"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tyler Flar", email = "tflar@ucsd.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "pyproj>=3.7.1",
    "pyqt6>=6.9.1",
    "pyqt6-webengine>=6.9.0",
    "radio-telemetry-tracker-drone-comms-package",
    "requests>=2.32.4",
    "scipy>=1.16.0",
    "werkzeug>=3.1.3",
]

[project.scripts]
radio-telemetry-tracker-drone-gcs = "radio_telemetry_tracker_drone_gcs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
radio-telemetry-tracker-drone-comms-package = { git = "https://github.com/UCSD-E4E/radio-telemetry-tracker-drone-comms-package" }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-qt>=4.4.0",
    "ruff>=0.12.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--maxfail=5 --tb=short"
